# beatforge

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pytest.ini
apps/api/: Dockerfile  README.md  pyproject.toml  requirements-vocal.lock.txt  requirements-vocal.txt  requirements.txt
apps/api/beatforge_api/: __init__.py  __main__.py  chart_routes.py  config.py  database.py  errors.py  export_safety.py  jobs.py  main.py  media.py  models.py  package_export.py  platform_paths.py  routes.py  schemas.py  serialization.py  service.py  storage_paths.py  timing.py  vocal_jobs.py  waveform_store.py
apps/api/beatforge_api/audio/: __init__.py  chart_policy.py  config.py  features.py  focus.py  io.py  (+12 more)
apps/api/tests/: conftest.py  test_alignment.py  test_alignment_ctc_adapters.py  test_alignment_mfa.py  test_api.py  test_audio_analysis.py  test_candidate_events.py  test_chart_learning.py  test_chart_library_privacy.py  test_chart_model_integration.py  test_chart_policy.py  test_complex_audio_robustness.py  test_export_package.py  test_export_safety.py  test_hubert_ctc_v06.py  test_hubert_engine.py  test_lyric_chunking.py  test_melody.py  test_mora_decoder.py  test_platform_paths.py  test_qwen_vocal.py  test_qwen_vocal_cli.py  test_rhythm_constraint.py  test_service.py  test_stem_focus.py  test_storage_paths.py  test_timing.py  test_vocal_candidates.py  test_vocal_lyrics.py  test_vocal_timing.py
(+128 files in other folders)
