[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "beatforge-api"
version = "0.7.1"
description = "BeatForge Studio local audio analysis API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.12",
  "librosa==0.11.0",
  "numpy==2.2.6",
  "pydantic==2.11.5",
  "pydantic-settings==2.9.1",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "scipy==1.15.3",
  "soundfile==0.13.1",
  "sqlalchemy==2.0.41",
  "uvicorn[standard]==0.34.2",
]

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "hatchling==1.27.0",
  "httpx==0.28.1",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "ruff==0.11.11",
]
accurate = [
  "demucs==4.0.1",
  "torch==2.13.0",
  "torchaudio==2.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["beatforge_api"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
